--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
 
 .masonry {
   display: flex;
-  flex-wrap: wrap;
-  min-height: 400px;
-  gap: 50px;
- 
+  /* flex-wrap: wrap;
+  min-height: 400px; */
+  gap: 30px;
+ /* justify-content: space-between; */
   padding: 0px 70px;
  
 }
