--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
 
     .box h1 {
-      font-size: 24px;
+      font-size: 40px;;
     }
 
     .box p {
@@ -119,8 +119,12 @@
 
     .left-section {
       flex-grow: 1;
+      
     }
-
+    .sub-heading{
+      display: flex;
+      gap: 10px;
+    }
     .left-section h1 {
       font-size: 35px;
       color: #007c84;
@@ -151,17 +155,14 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
-      padding: 0px 60px;
+      padding: 0px 40px;
     }
 
     .rightbox {
-      width: 100%;
-      max-width: 300px;
-    
+      width: 300px;
       border: 1px solid #ccc;
       margin-bottom: 20px;
       border-radius: 15px;
-      position: relative;
     }
 
     .rightbox img {
@@ -187,15 +188,45 @@
       font-size: 14px;
     }
 
-.first{
-  position: relative;
-  padding-top: 100px;
-}
-.third{
-  position: relative;
-  left: 80px;
-  bottom: 20px;
-}
+    /* Responsive Adjustments */
+
+    @media screen and (max-width: 1024px) {
+      .container {
+        flex-wrap: wrap;
+      }
+
+      .sidebar {
+        width: 100%;
+        order: 2;
+      }
+
+      .content {
+        width: 100%;
+        order: 1;
+      }
+    }
+
+    @media screen and (max-width: 767px) {
+      .box {
+        height: auto;
+      }
+
+      .box-content {
+        padding: 5px;
+      }
+
+      .rightbox {
+        width: 100%;
+      }
+
+      .rightbox img {
+        height: auto;
+      }
+
+      .masonry {
+        padding: 0px 20px;
+      }
+    }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
