--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     .container {
       display: flex;
       height: 100vh;
-      overflow: hidden; /* Prevent vertical scroll */
+  
     }
 
     .sidebar {
@@ -60,15 +60,19 @@
     }
 
     .demo-button {
-      width: 100%;
-      background-color: #007c84;
-      padding: 20px;
-      border-radius: 5px;
-      text-align: center;
-      color: #fff;
-      font-weight: bold;
-      margin-top: 20px;
-      position: relative;
+      
+    width: 100%;
+    background-color: #007c84;
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    display: flex;
+    color: #fff;
+    font-weight: bold;
+    margin-top: 20px;
+    position: relative;
+    justify-content: space-around;
+    align-items: center;
     }
 
     .demo-button i {
@@ -81,10 +85,10 @@
       margin-top: 20px;
     }
 
-    .demo-icons i {
+    .demo-icons span {
       background-color: #fff;
       border-radius: 50%;
-      padding: 10px;
+      padding: 5px;
     }
 
     .mail {
@@ -94,7 +98,7 @@
       align-items: center;
     }
 
-    .mail i {
+    .mail span {
       background-color: #fff;
       border-radius: 50%;
       padding: 5px;
@@ -108,7 +112,7 @@
     .content {
       width: 84%;
       height: 100%;
-      overflow-y: auto; /* Add vertical scroll if necessary */
+     
     }
 
     .header {
@@ -180,53 +184,22 @@
     }
 
     .box-content h2 {
-      font-size: 18px;
-      margin-bottom: 5px;
+      color: #000;
+font-family: "";
+font-size: 32px;
+font-style: normal;
+font-weight: 500;
+line-height: 26px; /* 81.25% */
+letter-spacing: -0.352px;
     }
 
     .box-content p {
-      font-size: 14px;
+      font-style: normal;
+font-weight: 400;
+font-size: 12px;
     }
 
-    /* Responsive Adjustments */
-
-    @media screen and (max-width: 1024px) {
-      .container {
-        flex-wrap: wrap;
-      }
-
-      .sidebar {
-        width: 100%;
-        order: 2;
-      }
-
-      .content {
-        width: 100%;
-        order: 1;
-      }
-    }
-
-    @media screen and (max-width: 767px) {
-      .box {
-        height: auto;
-      }
-
-      .box-content {
-        padding: 5px;
-      }
-
-      .rightbox {
-        width: 100%;
-      }
-
-      .rightbox img {
-        height: auto;
-      }
-
-      .masonry {
-        padding: 0px 20px;
-      }
-    }
+  
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -249,20 +222,32 @@
         </div>
       </div>
       <div class="demo-button">
-        <a>Demo</a> <i class="fal fa-greater-than"></i>
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+          <path d="M11 0.523438C16.7861 0.523438 21.4766 5.21396 21.4766 11C21.4802 13.2597 20.7498 15.4595 19.3953 17.2683C17.4808 19.8215 14.4301 21.4766 11 21.4766H10.997C7.58229 21.4756 4.54418 19.8342 2.62882 17.2997C1.25925 15.4853 0.519953 13.2732 0.52345 11C0.52345 5.21396 5.21397 0.523438 11 0.523438ZM11 19.9039C15.9151 19.9039 19.9139 15.906 19.9139 10.9919C19.9139 6.07784 15.9151 2.0799 11 2.0799C6.08491 2.0799 2.08612 6.0778 2.08612 10.9919C2.08612 15.9059 6.08486 19.9039 11 19.9039ZM5.12639 7.32205C5.25994 7.32222 5.39124 7.35638 5.50794 7.42132C5.62463 7.48626 5.72288 7.57984 5.79342 7.69324C5.86395 7.80664 5.90446 7.93613 5.91112 8.06952C5.91779 8.2029 5.89039 8.33578 5.8315 8.45565C5.44238 9.24434 5.24114 10.1124 5.24355 10.9919C5.24355 14.1653 7.82585 16.7471 11 16.7471C14.1741 16.7471 16.7563 14.1653 16.7563 10.9919C16.7587 10.1124 16.5575 9.24433 16.1683 8.45565C16.0774 8.26861 16.0643 8.05319 16.1319 7.85651C16.1994 7.65982 16.342 7.49789 16.5287 7.40612C16.7153 7.31434 16.9306 7.30021 17.1276 7.3668C17.3246 7.43339 17.4872 7.57528 17.5799 7.76145C18.0757 8.76597 18.3322 9.87165 18.3293 10.9919C18.3293 15.0325 15.0414 18.3198 10.9999 18.3198C6.95847 18.3198 3.67057 15.0325 3.67057 10.9919C3.66768 9.87165 3.9242 8.76597 4.42003 7.76145C4.48493 7.62951 4.58552 7.5184 4.71037 7.44073C4.83522 7.36307 4.97935 7.32195 5.12639 7.32205ZM11 13.3509C10.4434 13.351 9.90474 13.1544 9.47917 12.7957C9.05359 12.437 8.76853 11.9394 8.6744 11.3908C8.58027 10.8423 8.68312 10.2781 8.96476 9.79805C9.24641 9.318 9.68872 8.95299 10.2135 8.76755V4.43895C10.2135 4.23036 10.2964 4.0303 10.4439 3.8828C10.5914 3.7353 10.7914 3.65244 11 3.65244C11.2086 3.65244 11.4087 3.7353 11.5562 3.8828C11.7037 4.0303 11.7865 4.23036 11.7865 4.43895V8.76755C12.3113 8.95299 12.7536 9.318 13.0353 9.79805C13.3169 10.2781 13.4198 10.8423 13.3256 11.3908C13.2315 11.9394 12.9464 12.437 12.5209 12.7957C12.0953 13.1544 11.5566 13.351 11 13.3509ZM11 10.2056C10.8445 10.2056 10.6925 10.2518 10.5632 10.3382C10.4339 10.4246 10.3331 10.5475 10.2736 10.6912C10.2141 10.8348 10.1986 10.9929 10.229 11.1455C10.2593 11.298 10.3342 11.4381 10.4442 11.5481C10.5542 11.658 10.6943 11.7329 10.8468 11.7632C10.9994 11.7935 11.1575 11.778 11.3011 11.7184C11.4448 11.6589 11.5676 11.5581 11.654 11.4288C11.7404 11.2995 11.7865 11.1475 11.7865 10.992C11.7863 10.7834 11.7034 10.5835 11.5559 10.4361C11.4085 10.2886 11.2085 10.2057 11 10.2055V10.2056Z" fill="white"/>
+        </svg>
+         <a>Demo</a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
+          <path d="M5 1.5L9.5 6L5 10.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></i>
       </div>
       <div class="demo-button">
-        White Label
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
+          <path d="M11 0.523438C16.7861 0.523438 21.4766 5.21396 21.4766 11C21.4802 13.2597 20.7498 15.4595 19.3953 17.2683C17.4808 19.8215 14.4301 21.4766 11 21.4766H10.997C7.58229 21.4756 4.54418 19.8342 2.62882 17.2997C1.25925 15.4853 0.519953 13.2732 0.52345 11C0.52345 5.21396 5.21397 0.523438 11 0.523438ZM11 19.9039C15.9151 19.9039 19.9139 15.906 19.9139 10.9919C19.9139 6.07784 15.9151 2.0799 11 2.0799C6.08491 2.0799 2.08612 6.0778 2.08612 10.9919C2.08612 15.9059 6.08486 19.9039 11 19.9039ZM5.12639 7.32205C5.25994 7.32222 5.39124 7.35638 5.50794 7.42132C5.62463 7.48626 5.72288 7.57984 5.79342 7.69324C5.86395 7.80664 5.90446 7.93613 5.91112 8.06952C5.91779 8.2029 5.89039 8.33578 5.8315 8.45565C5.44238 9.24434 5.24114 10.1124 5.24355 10.9919C5.24355 14.1653 7.82585 16.7471 11 16.7471C14.1741 16.7471 16.7563 14.1653 16.7563 10.9919C16.7587 10.1124 16.5575 9.24433 16.1683 8.45565C16.0774 8.26861 16.0643 8.05319 16.1319 7.85651C16.1994 7.65982 16.342 7.49789 16.5287 7.40612C16.7153 7.31434 16.9306 7.30021 17.1276 7.3668C17.3246 7.43339 17.4872 7.57528 17.5799 7.76145C18.0757 8.76597 18.3322 9.87165 18.3293 10.9919C18.3293 15.0325 15.0414 18.3198 10.9999 18.3198C6.95847 18.3198 3.67057 15.0325 3.67057 10.9919C3.66768 9.87165 3.9242 8.76597 4.42003 7.76145C4.48493 7.62951 4.58552 7.5184 4.71037 7.44073C4.83522 7.36307 4.97935 7.32195 5.12639 7.32205ZM11 13.3509C10.4434 13.351 9.90474 13.1544 9.47917 12.7957C9.05359 12.437 8.76853 11.9394 8.6744 11.3908C8.58027 10.8423 8.68312 10.2781 8.96476 9.79805C9.24641 9.318 9.68872 8.95299 10.2135 8.76755V4.43895C10.2135 4.23036 10.2964 4.0303 10.4439 3.8828C10.5914 3.7353 10.7914 3.65244 11 3.65244C11.2086 3.65244 11.4087 3.7353 11.5562 3.8828C11.7037 4.0303 11.7865 4.23036 11.7865 4.43895V8.76755C12.3113 8.95299 12.7536 9.318 13.0353 9.79805C13.3169 10.2781 13.4198 10.8423 13.3256 11.3908C13.2315 11.9394 12.9464 12.437 12.5209 12.7957C12.0953 13.1544 11.5566 13.351 11 13.3509ZM11 10.2056C10.8445 10.2056 10.6925 10.2518 10.5632 10.3382C10.4339 10.4246 10.3331 10.5475 10.2736 10.6912C10.2141 10.8348 10.1986 10.9929 10.229 11.1455C10.2593 11.298 10.3342 11.4381 10.4442 11.5481C10.5542 11.658 10.6943 11.7329 10.8468 11.7632C10.9994 11.7935 11.1575 11.778 11.3011 11.7184C11.4448 11.6589 11.5676 11.5581 11.654 11.4288C11.7404 11.2995 11.7865 11.1475 11.7865 10.992C11.7863 10.7834 11.7034 10.5835 11.5559 10.4361C11.4085 10.2886 11.2085 10.2057 11 10.2055V10.2056Z" fill="white"/>
+        </svg>
+         <a>White Label</a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
+          <path d="M5 1.5L9.5 6L5 10.5" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg></i>
       </div>
       <div class="mail">
-        <i class="fa fa-envelope"></i>
+        <span><img src="email.png" alt="" style="height: 12px;"></span>
         <a href="mailto:hello@rewarsdna.com">hello@rewarsdna.com</a>
       </div>
       <div class="demo-icons">
-        <i class="fa fa-star"></i>
-        <i class="fa fa-heart"></i>
-        <i class="fa fa-thumbs-up"></i>
-        <i class="fa fa-smile-o"></i>
+        <span><img src="address.png" alt="" style="height: 18px;"></span>
+        <span><img src="insurance.png" alt="" style="height: 18px;"></span>
+        <span><img src="info.png" alt="" style="height: 18px;"></span>
+        <span><img src="question.png" alt="" style="height: 18px;"></span>
       </div>
     </div>
     <div class="content">
