--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     }
 
     .sidebar {
-      width: 16%;
+      min-width:240px;
       background-color: hwb(182 82% 7% / 0.544);
       padding: 20px;
     }
@@ -110,9 +110,9 @@
     }
 
     .content {
-      width: 84%;
+      width: 100%;
       height: 100%;
-     
+     position: relative;
     }
 
     .header {
@@ -120,6 +120,8 @@
       justify-content: space-between;
       align-items: center;
       padding: 10px 40px;
+      position: absolute;
+      width: 100%;
     }
 
     .left-section {
@@ -159,7 +161,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
-      padding: 0px 40px;
+      padding: 0px 65px;
     }
 
     .rightbox {
@@ -198,8 +200,18 @@ letter-spacing: -0.352px;
 font-weight: 400;
 font-size: 12px;
     }
-
-  
+.first{
+  position: relative;
+  top: 200px;
+}
+  .secondbox{
+    position: relative;
+    top: 39px;
+  }
+  .thirdbox{
+    position: relative;
+    top: 80px;
+  }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -301,7 +313,7 @@ font-size: 12px;
             </div>
           </div>
         </div>
-        <div class="secondbox">
+        <div class="thirdbox">
           <div class="third">
             <div class="rightbox">
               <img src="young-handsome-man-glasses-showing-advertisement-smiling-pointing-fingers-left-making-announcement-standing-against-blue-background.jpg"
