added flex to first

--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@ font-size: 12px;
     }
 .first{
   position: relative;
-  top: 150px;
+  display: flex;
+  align-items: center;
 }
   .secondbox{
     position: relative;
