--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Responsive Design with Sidebar</title>
+  <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <style>
     * {
       box-sizing: border-box;
@@ -11,7 +12,7 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Poppins';
       height: 100%;
     }
 
