--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Responsive Design with Sidebar</title>
+  <title>Rewards Dna</title>
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
   <style>
     * {
@@ -165,7 +165,7 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
-      padding: 0px 65px;
+      padding: 110px 65px;
       justify-content: space-between;
     }
 
@@ -215,7 +215,7 @@
 
     .secondbox {
       position: relative;
-      top: 39px;
+      top: 40px;
     }
 
     .thirdbox {
@@ -313,10 +313,8 @@
               <div class="box-content">
                 <h2>JD Manager</h2>
                 <p>Create precise job descriptions instantly with JD Manager. Achieve business alignment and buy-in
-                  through collaborative processes. Easily track,
-                  update, allocate, and share job descriptions, while also keeping track of revisions. Strengthen
-                  various HR programs, from recruitment
-                  to right-sizing initiatives.
+                  through collaborative processes.
+                  
                 </p>
               </div>
             </div>
@@ -330,9 +328,7 @@
                 <h2>JE Manager</h2>
                 <p>Streamline job leveling and grading with JE Manager. Build a fair and defensible job hierarchy while
                   collaborating with business leaders for
-                  objectivity and buy-in. This tool can manage various job evaluation methodologies, including
-                  classification and point factor methods.
-                  Gain insights into job size, grades, bands, and career architecture.
+                  .
                 </p>
               </div>
             </div>
@@ -343,10 +339,8 @@
               <div class="box-content">
                 <h2>Comp 360</h2>
                 <p>Effortlessly manage merit cycles with Comp360. This tool allows you to build budget scenarios, obtain
-                  merit recommendations, and issue stunning
-                  total rewards statements. Run high-impact merit cycles, reward performance, address pay gaps, analyze
-                  key metrics, engage, and stay
-                  within the budget.
+                  merit recommendations, and issue stunning.
+                 
                 </p>
               </div>
             </div>
@@ -361,9 +355,7 @@
                   <h2>Nudge</h2>
                   <p>Empower your sales team to achieve their targets more easily than ever with Nudge. Leveraging
                     insights from behavioral sciences, Nudge helps
-                    you create effective incentive plans, communicate them with impact, and drive better outcomes.
-                    Consistently engage your team, and
-                    supervisors can manage team performance with real-time actionable insights</p>
+                    .</p>
                 </div>
               </div>
             </div>
@@ -375,10 +367,8 @@
                 <div class="box-content">
                   <h2>Advantage</h2>
                   <p>Significantly improve offer acceptance rates and retention with Advantage. This tool effectively
-                    communicates your Employee Value Proposition
-                    to candidates and employees through visually appealing and impactful total rewards statements. It
-                    covers every HR program, from base
-                    pay to equity to benefits and enhances offer acceptance and employee retention</p>
+                    communicates your Employee Value Proposition.
+                    </p>
                 </div>
               </div>
             </div>
