added responsive check

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
-      padding: 110px 65px;
-      justify-content: space-between;
+      padding: 50px 65px 0px 50px;
+      justify-content: space-evenly;
     }
 
     .rightbox {
@@ -230,7 +230,8 @@
     }
     #thirdcomp{
       position: relative;
-      right: 70px;
+      right: 60px;
+      top: 100px;
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
