--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     }
 
     .rightbox img {
-      height: 150px;
+      height: 130px;
       width: 100%;
       object-fit: cover;
       border-radius: 15px;
@@ -205,6 +205,7 @@
       font-style: normal;
       font-weight: 400;
       font-size: 12px;
+      padding: 10px;
     }
 
     .first {
@@ -220,7 +221,7 @@
 
     .thirdbox {
       position: relative;
-      top: 80px;
+      top: 40px;
     }
     .fifth{
       
