added the responsive checking

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
       position: relative;
       display: flex;
       align-items: center;
+      bottom: 40px;
     }
 
     .secondbox {
@@ -232,7 +233,7 @@
     #thirdcomp{
       position: relative;
       right: 60px;
-      top: 100px;
+      top: 44px;
     }
   </style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
