--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     .container {
       display: flex;
-
+      min-height: 100vh;
 
     }
 
@@ -26,7 +26,7 @@
       min-width: 240px;
       background-color: hwb(182 82% 7% / 0.544);
       padding: 20px;
-      height: 100vh;
+     min-height: 100vh;
       
     }
 
